# rust_tutorial

./: .gitignore  Cargo.toml
src/: main.rs
tests/: cli.rs
