[package]
name = "grrs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
anyhow = "1.0"
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1.0"
uuid = "0.8"
rust-crypto = "0.2.36"
base64 = "0.13.0"
toml = "0.5.8"